Bug 361915 - plasma5, Folder menu does not have hot key letter selectors.
Summary: plasma5, Folder menu does not have hot key letter selectors.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.0.0
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL: https://bugs.mageia.org/show_bug.cgi?...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-17 23:39 UTC by Bit Twister
Modified: 2017-03-20 11:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bit Twister 2016-04-17 23:39:43 UTC
Folder menu does not have hot key letter selectors
C I R w K m A d t L S e F N O

mga5  $ kde4-config --version
Qt: 4.8.6
KDE Development Platform: 4.14.5
kde4-config: 1.0

mga6 #   kde4-config --version
Qt: 4.8.7
KDE Development Platform: 4.14.18
kde4-config: 1.0

https://bugs.mageia.org/attachment.cgi?id=7353&action=edit

For example with the mga5 menu I can right click the desktop and hit e to exit.
on mga6 I have to pick the Leave selection.
Comment 1 Christoph Feck 2016-04-23 02:51:40 UTC
Not sure if the desktop context menu is a QMenu or some QML reimplementation. If it is is a real QMenu, it could be a Breeze widget style issue. Please reassign accordingly.
Comment 2 Bit Twister 2016-04-23 04:13:28 UTC
(In reply to Christoph Feck from comment #1)
> Not sure if the desktop context menu is a QMenu or some QML

As a ignorant user I have even less knowledge.

> reimplementation. If it is is a real QMenu, it could be a Breeze widget
> style issue. 

Even if desktop theme is Oxygen.?
Comment 3 Christoph Feck 2016-04-23 10:21:10 UTC
Comment #1 was meant for Plasma developers.
Comment 4 Nicolas L. 2016-07-26 20:11:06 UTC
any news on this bugreport ? It is still valid on plasma 5.7.2 for the reporter
Comment 5 Nicolas L. 2017-03-15 09:25:09 UTC
still valid on plasma 5.8.x and 5.9.x.

Is it something that will be fixed or is this the normal behaviour now ?
Comment 6 Kai Uwe Broulik 2017-03-16 10:48:19 UTC
Git commit ff78b9e53113538ba4a3e3843ea444e55fc59ac9 by Kai Uwe Broulik.
Committed on 16/03/2017 at 10:47.
Pushed by broulik into branch 'master'.

Add KAcceleratorManager

This way containment context menus and PlasmaComponents Menu get accelerators assigned to by default.

CHANGELOG: Most (context) menus have accelerators (Alt+letter shortcuts) now

Differential Revision: https://phabricator.kde.org/D5057

M  +1    -0    src/declarativeimports/plasmacomponents/CMakeLists.txt
M  +3    -0    src/declarativeimports/plasmacomponents/qmenu.cpp
M  +3    -0    src/scriptengines/qml/plasmoid/containmentinterface.cpp

https://commits.kde.org/plasma-framework/ff78b9e53113538ba4a3e3843ea444e55fc59ac9
Comment 7 Kai Uwe Broulik 2017-03-16 10:51:07 UTC
Git commit 48fe6ba01c7f473e57b0db294834f1abde531960 by Kai Uwe Broulik.
Committed on 16/03/2017 at 10:49.
Pushed by broulik into branch 'master'.

[System Tray] Add KAcceleratorManager

This way plasmoid and SNI context menus get accelerators assigned to by default.

Differential Revision: https://phabricator.kde.org/D5058

M  +3    -0    applets/systemtray/systemtray.cpp

https://commits.kde.org/plasma-workspace/48fe6ba01c7f473e57b0db294834f1abde531960
Comment 8 Nicolas L. 2017-03-20 11:09:55 UTC
can this be cherrypicked for plasma 5.8 please ?